--- a/index.html
+++ b/index.html
@@ -30,21 +30,18 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h1>Esteban Sias</h1>
+        <h2>Business Administration Student in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am currently studying Business Administration at Bob Jones University. I have experience in managing storage and inventory, and I enjoy working in team environments where collaboration and shared goals are key.</p>
          <p>
-            I am part of Gateway Baptist Church. My favorite website is  
-            <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            I am always willing to learn and improve. I consider myself a problem solver and someone who thrives when facing new challenges. I’m passionate about developing leadership skills and learning how to manage resources efficiently in a business context.  
          </p> 
          <p>
             I enjoy listening to podcasts and having deep conversations.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Business Administration<br />
         Bob Jones University<br />
         Example image:
         <img src="https://cs.bju.edu/media/bju-math-division/bju-computer-science/site-assets/images/cs-logo-main.png" />
